tests/ui/capture_value_span_same.stderr
error: `bind!` value and span targets must use distinct identifiers
 --> tests/ui/capture_value_span_same.rs:9:9
  |
9 |         x
  |         ^
